--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,2 @@
-attr==0.3.2
-ConfigParser==7.2.0
-cryptography==46.0.3
 Django==6.0.1
-docutils==0.22.4
-filelock==3.20.3
-HTMLParser==0.0.2
-ipython==9.9.0
-ipywidgets==8.1.8
-jnius==1.1.0
-keyring==25.7.0
-protobuf==6.33.4
-pyOpenSSL==25.3.0
-redis==7.1.0
-Sphinx==9.1.0
-thread==2.0.6
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+coverage[toml]==7.6.0
